Fix navbar css on mobile, tweak help text for semester

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -25,7 +25,7 @@ html, body {
 	min-height: 100vh;
 	background-color: var(--bg);
 }
-#navbar, .navbar-menu {
+#navbar, .navbar-menu, #navMenu {
 	background-color: var(--base03);
 }
 #navbar .navbar-link, .navbar-item,.navbar-dropdown {
